Fixed the wrapper not containing all the posts. Posts were overflowing outside the wrapper

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -28,7 +28,7 @@ body {
  .wrapper {
    padding: 0 15px;
    width: 90%;
-   min-height: 120vh;
+   height: auto;
    margin: 0 auto;
    border-top: none;
    box-shadow: 0 0 2px black;
@@ -36,8 +36,7 @@ body {
  }
 
  .tweets-container {
-   position: relative;
-   top: 120px;
+   margin-top: 120px;
    display: grid;
    width: 100%;
    background-color: #f4f1ec;
